--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -1424,7 +1424,7 @@
                     <a href="https://www.youtube.com/watch?v=UvPMvSRTVyI" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jan 12, 2015</p>
                     </div>
                 </div>
@@ -1432,7 +1432,7 @@
                     <p>The Butcher</p>
                     <p class="world-rank">166</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 28, 2014</p>
                     </div>
                 </div>
@@ -1440,7 +1440,7 @@
                     <p>Ko'ragh</p>
                     <p class="world-rank">161</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 28, 2014</p>
                     </div>
                 </div>
@@ -1448,7 +1448,7 @@
                     <p>Tectus</p>
                     <p class="world-rank">65</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 14, 2014</p>
                     </div>
                 </div>
@@ -1456,7 +1456,7 @@
                     <p>Brackenspore</p>
                     <p class="world-rank">63</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 12, 2014</p>
                     </div>
                 </div>
@@ -1464,7 +1464,7 @@
                     <p>Twin Ogron</p>
                     <p class="world-rank">162</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 11, 2014</p>
                     </div>
                 </div>
@@ -1472,7 +1472,7 @@
                     <p>Kargath Bladefist</p>
                     <p class="world-rank">359</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Dec 10, 2014</p>
                     </div>
                 </div>
@@ -1493,27 +1493,19 @@
             <div class="tier-bosses">
                 <div id="boss-container" class="flex-col">
                     <p>Garrosh Hellscream (25)</p>
-                    <a href="https://www.youtube.com/watch?v=6slg_cG0IDo" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
+                    <a href=https://www.youtube.com/watch?v=u1iIAce12p8 target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
                     <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Jun 10, 2014</p>
-                    </div>
-                </div>
-                <div id="boss-container" class="flex-col">
-                    <p>Garrosh Hellscream</p>
-                    <p class="world-rank">400</p>
-                    <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Mar 7, 2014</p>
+                        <p class="subtitle">Wipes: ???</p>
+                        <p class="subtitle">Nov 25, 2013</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Thok the Bloodthirsty</p>
                     <p class="world-rank">2111</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Feb 13, 2014</p>
                     </div>
                 </div>
@@ -1521,7 +1513,7 @@
                     <p>Paragons of the Klaxxi</p>
                     <p class="world-rank">667</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Feb 11, 2014</p>
                     </div>
                 </div>
@@ -1529,7 +1521,7 @@
                     <p>Siegecrafter Blackfuse</p>
                     <p class="world-rank">873</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Feb 9, 2014</p>
                     </div>
                 </div>
@@ -1537,7 +1529,7 @@
                     <p>Spoils of Pandaria</p>
                     <p class="world-rank">300</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Oct 17, 2013</p>
                     </div>
                 </div>
@@ -1545,7 +1537,7 @@
                     <p>Malkorok</p>
                     <p class="world-rank">391</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Oct 14, 2013</p>
                     </div>
                 </div>
@@ -1553,7 +1545,7 @@
                     <p>General Nazgrim</p>
                     <p class="world-rank">472</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Oct 7, 2013</p>
                     </div>
                 </div>
@@ -1561,7 +1553,7 @@
                     <p>Iron Juggernaut</p>
                     <p class="world-rank">372</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Sep 30, 2013</p>
                     </div>
                 </div>
@@ -1569,7 +1561,7 @@
                     <p>Galakras</p>
                     <p class="world-rank">319</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Sep 26, 2013</p>
                     </div>
                 </div>
@@ -1624,15 +1616,16 @@
                     <p>Ra'den</p>
                     <p class="world-rank">???</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Aug 14, 2013</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
                     <p>Lei Shen</p>
                     <p class="world-rank">837</p>
+                    <a href=https://www.youtube.com/watch?v=SsNdRSE-XJA target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Aug 13, 2013</p>
                     </div>
                 </div>
@@ -1640,7 +1633,7 @@
                     <p>Dark Animus</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jul 28, 2013</p>
                     </div>
                 </div>
@@ -1648,7 +1641,7 @@
                     <p>Durumu the Forgotten</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jul 4, 2013</p>
                     </div>
                 </div>
@@ -1656,7 +1649,7 @@
                     <p>Megaera</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jul 4, 2013</p>
                     </div>
                 </div>
@@ -1664,7 +1657,7 @@
                     <p>Twin Consorts</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jun 30, 2013</p>
                     </div>
                 </div>
@@ -1672,7 +1665,7 @@
                     <p>Iron Qon</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jun 23, 2013</p>
                     </div>
                 </div>
@@ -1680,7 +1673,7 @@
                     <p>Primordius</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jun 17, 2013</p>
                     </div>
                 </div>
@@ -1688,7 +1681,7 @@
                     <p>Council of Elders</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Jun 5, 2013</p>
                     </div>
                 </div>
@@ -1696,7 +1689,7 @@
                     <p>Horridon</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">May 22, 2013</p>
                     </div>
                 </div>
@@ -1704,7 +1697,7 @@
                     <p>Ji-Kun</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">May 5, 2013</p>
                     </div>
                 </div>
@@ -1712,7 +1705,7 @@
                     <p>Tortos</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">May 1, 2013</p>
                     </div>
                 </div>
@@ -1720,11 +1713,10 @@
                     <p>Jin'rokh the Breaker</p>
                     <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
-                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Wipes: ???</p>
                         <p class="subtitle">Apr 4, 2013</p>
                     </div>
                 </div>
-
             </div>
         </div>
 
