--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -1247,7 +1247,7 @@
             <img src="../assets/media/Tiers/HFC.png" height="auto" width="100%">
             <div class="flex-col tier-content">
                 <p class="tier-name">Hellfire Citadel</p>
-                <p class="world-rank">???</p>
+                <p class="world-rank">-</p>
                 <i class="open-tier material-icons md-36 ">arrow_circle_down</i>
                 <i class="close-tier material-icons md-36 ">highlight_off</i>
             </div>
@@ -1257,7 +1257,79 @@
                     <p>Archimonde</p>
                     <a href="https://www.youtube.com/watch?v=8ADUwJTc9Ew" target="_blank" class="video-link" onclick="event.stopPropagation()"><i class="material-icons md-24" data-tooltip="Kill video" data-position="bottom">open_in_new</i><span class="tooltiptext">Show video</span></a>
 
-                    <p class="world-rank">???</p>
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Sep 28, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Mannoroth</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Aug 31, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Xhul'horac</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Aug 17, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Tyrant Velhari</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Aug 10, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Fel Lord Zakuun</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Aug 02, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Shadow-Lord Iskar</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Jul 27, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Socrethar the Eternal</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Jul 26, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Gorefiend</p>
+
+                    <p class="world-rank">-</p>
+                    <div class="flex-row bottom-row">
+                        <p class="subtitle">Wipes: -</p>
+                        <p class="subtitle">Jul 23, 2015</p>
+                    </div>
+                </div>
+                <div id="boss-container" class="flex-col">
+                    <p>Kilrogg Deadeye</p>
+
+                    <p class="world-rank">-</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
                         <p class="subtitle">Jul 12, 2015</p>
@@ -1269,7 +1341,7 @@
                     <p class="world-rank">90</p>
                     <div class="flex-row bottom-row">
                         <p class="subtitle">Wipes: -</p>
-                        <p class="subtitle">Jul 7, 2015</p>
+                        <p class="subtitle">Jul 6, 2015</p>
                     </div>
                 </div>
                 <div id="boss-container" class="flex-col">
