--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <section class="main-content flex-col">
         <div class="text-content">
-            <p>Oblivion wurde 2006 unter dem Namen "Symphony" auf dem Server Anub'arak gegründet.</p>
-            <p>Wir sind somit eine der ältesten deutschen World of Warcraft-Gilden.</p>
+            <p>Oblivion wurde 2006 unter dem Namen "Symphony" auf dem Server Anub'arak gegründet.
+               Wir sind somit eine der ältesten deutschen World of Warcraft-Gilden.</p>
             <p>Oberste Priorität hat bei uns effizientes Raiden <span>OHNE</span> Alt-Pflicht.
             </p>
 
