--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <p> Nach über 10 Jahren auf Anub'arak sind wir am 19.06.2020 mit allen Membern nach Blackrock gezogen.</p>
             <br/>
-            <p>Progress-Schedule:</p>
+            <p><u>Progress-Schedule:</u></p>
             <ul class="raid-schedule">
                 <li><span>MITTWOCH</span> 19.00 - 23.00 Uhr</span></li>
                 <li><span>DONNERSTAG</span><span> 19.00 - 23.00 Uhr</span></li>
