--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
                             <td colspan="4"><strong>Hellfire Citadel</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td>Archimonde</td>
-                            <td>???</td>
+                            <td>-</td>
                             <td>Sep 28, 2015</td>
                         </tr>
                             <td colspan="4"><strong>Blackrock Foundry, Highmaul</strong></td>
