--- a/index.html
+++ b/index.html
@@ -216,31 +216,31 @@
                             <td colspan="4"><strong>Blackrock Foundry, Highmaul</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_BlackrockFoundry/oblivion_blackhand.png">Blackhand</a></td>
-                            <td>???</td>
+                            <td>-</td>
                             <td>Apr 12, 2015</td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T17_Highmaul/oblivion_margok.png">Imperator Mar'gok</a></td>
-                            <td>???</td>
+                            <td>-</td>
                             <td>Jan 22, 2015</td>
                         </tr>
                             <td colspan="4"><strong>Siege of Orgrimmar</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T16_SiegeOfOrgrimmar/oblivion_garrosh25.png">Garrosh Hellscream (25)</a></td>
-                            <td>???</td>
+                            <td>-</td>
                             <td>Nov 25, 2013</td>
                         </tr>
                             <td colspan="4"><strong>Throne of Thunder</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td>Ra-den (10)</td>
-                            <td>???</td>
+                            <td>-</td>
                             <td>Jun 03, 2013</td>
                         </tr>
                         <td colspan="4"><strong>Blackwing Descent</strong></td>
@@ -248,48 +248,48 @@
                         <tr>
                             <td class="world-rank">???</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T11_BlackwingDescent/oblivion_nefarian.png">Nefarian</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                         <td colspan="4"><strong>Throne of the Four Winds</strong></td>
                         </tr>
                         <tr>
                             <td class="world-rank">???</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T11_ThroneOfTheFourWinds/oblivion_alakir.png">Al'Akir</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                         <td colspan="4"><strong>Icecrown Citadel</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T10_IcecrownCitadel/oblivion_lichking.png">The Lich King</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                         <td colspan="4"><strong>Trial of the Crusader</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T9_TrialOfTheCrusader/oblivion_anubarak.png">Anub'arak</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                         <td colspan="4"><strong>Ulduar</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T8_Ulduar/oblivion_yoggsaron.png">Yogg-Saron</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                         <td colspan="4"><strong>Ruins of Ahn'Qiraj</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T3.5_RuinsOfAhnQiraj/oblivion_ossirian.png">Ossirian the Unscarred</a></td>
-                            <td>???</td>
-                            <td>???</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                     </tbody>
                 </table>
