--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         <td colspan="4"><strong>Blackwing Descent</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T11_BlackwingDescent/oblivion_nefarian.png">Nefarian</a></td>
                             <td>-</td>
                             <td>-</td>
@@ -254,7 +254,7 @@
                         <td colspan="4"><strong>Throne of the Four Winds</strong></td>
                         </tr>
                         <tr>
-                            <td class="world-rank">???</td>
+                            <td class="world-rank">-</td>
                             <td class="emphasize"><a href="https://raw.githubusercontent.com/sheffywow/oblivionguild/master/assets/media/T11_ThroneOfTheFourWinds/oblivion_alakir.png">Al'Akir</a></td>
                             <td>-</td>
                             <td>-</td>
