--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i class="material-icons md-18">navigate_next</i></a></li>
-            <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
-            <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
+            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
+            <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
