--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -50,9 +50,9 @@
         </button>
 
         <ul class="legend">
-            <li><a href="/oblivionguild/" class="flex-row"><span class="emphasize">HOME </span><i
+            <li><a href="/oblivionguild/" class="flex-row"><span>HOME </span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
+            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span class="emphasize">RAIDING </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/roster" class="flex-row"><span>ROSTER</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
