--- a/pages/roster.html
+++ b/pages/roster.html
@@ -54,18 +54,16 @@
         </button>
 
         <ul class="legend">
-            <li><a href="https://sheffywow.github.io/oblivionguild" class="flex-row"><span>HOME </span><i class="material-icons md-18">navigate_next</i></a>
-            </li>
-
-            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
-                        class=" material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
+            <li><a href="/oblivionguild/" class="flex-row"><span>HOME </span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
-            <!--<li><a href="/oblivionguild/pages/videos">Videos/</a></li>-->
-            <li><a href="https://wago.io/p/squallne" class="flex-row" target="_blank"
-                    rel="noopener noreferrer"><span>WEAKAURAS</span><i
+            <li><a href="/oblivionguild/pages/raiding" class="flex-row"><span>RAIDING </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <li><a href="/oblivionguild/pages/roster" class="flex-row"><span class="emphasize">ROSTER</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
+                        class="material-icons md-18">navigate_next</i></a></li>
+            <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
+            <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
