--- a/pages/raiding.html
+++ b/pages/raiding.html
@@ -63,7 +63,10 @@
                         class="material-icons md-18">navigate_next</i></a></li>
         </ul>
 
-        <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild"><span class="flex-row">View on GitHub<i class="material-icons md-18 open-new-icon">open_in_new</i></span> <small>github/oblivionguild</small></a>
+        <a class="github-link display-desktop" href="https://github.com/SheffyWoW/oblivionguild" target="_blank"
+            rel="noopener noreferrer"><span class="flex-row">View on GitHub<i
+                    class="material-icons md-18 open-new-icon">open_in_new</i></span>
+            <small>github/oblivionguild</small></a>
     </nav>
 
     <section class="main-content tier-row flex-row" id="kill-count-table">
