--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -56,7 +56,7 @@
                         class="material-icons md-18">navigate_next</i></a></li>
             <li><a href="/oblivionguild/pages/streams" class="flex-row"><span>STREAMS </span><i
                         class="material-icons md-18">navigate_next</i></a></li>
-            <li><a href="/oblivionguild/" class="flex-row"><span class="emphasize">BOOSTING </span><i
+            <li><a href="/oblivionguild/pages/boosting" class="flex-row"><span class="emphasize">BOOSTING </span><i
                         class="emphasize material-icons md-18">navigate_next</i></a></li>
             <!--<li><a href="oblivionguild/pages/videos">Videos/</a></li>-->
             <li><a href="https://wago.io/p/squallne" target="_blank" rel="noopener noreferrer" class="flex-row"><span>WEAKAURAS</span><i
