--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -33,11 +33,11 @@
                 <a href=https://www.wowprogress.com/guild/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><span class="wowprogress">W</span></a>
             </li>
             <li>
-                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/raiderio.png" alt="raiderio"></a>
+                <a href=https://raider.io/guilds/eu/blackrock/Oblivion target="_blank" rel="noopener noreferrer"><img class="icon" src="../assets/media/icons/raiderio.png" alt="raiderio"></a>
             </li>
 
             <li>
-                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
+                <a href=https://www.warcraftlogs.com/guild/calendar/56317 target="_blank" rel="noopener noreferrer"><img class="icon" src="../assets/media/icons/warcraftlogs.png" alt="warcraftlogs"></a>
             </li>
         </ul>
 
@@ -77,17 +77,17 @@
             <br/>
             <p><u>PLACEHOLDER6</u></p>
             <ul class="raid-schedule">
-                <li><span>PLACEHOLDER-BOSS1</span> PLACEHOLDER-PREIS1</span></li>
-                <li><span>PLACEHOLDER-BOSS2</span><span> PLACEHOLDER-PREIS2</span></li>
-                <li><span>PLACEHOLDER-BOSS3</span><span> PLACEHOLDER-PREIS3</span></li>
-                <li><span>PLACEHOLDER-BOSS4</span><span> PLACEHOLDER-PREIS4</span></li>
-                <li><span>PLACEHOLDER-BOSS5</span><span> PLACEHOLDER-PREIS5</span></li>
-                <li><span>PLACEHOLDER-BOSS6</span><span> PLACEHOLDER-PREIS6</span></li>
-                <li><span>PLACEHOLDER-BOSS7</span><span> PLACEHOLDER-PREIS7</span></li>
-                <li><span>PLACEHOLDER-BOSS8</span><span> PLACEHOLDER-PREIS8</span></li>
-                <li><span>PLACEHOLDER-BOSS9</span><span> PLACEHOLDER-PREIS9</span></li>
-                <li><span>PLACEHOLDER-BOSS10</span><span> PLACEHOLDER-PREIS10</span></li>
-                <li><span>PLACEHOLDER-BOSS11</span><span> PLACEHOLDER-PREIS11</span></li>
+                <li><span>PLACEHOLDER-BOSS1</span><span>    PLACEHOLDER-PREIS1</span></li>
+                <li><span>PLACEHOLDER-BOSS2</span><span>    PLACEHOLDER-PREIS2</span></li>
+                <li><span>PLACEHOLDER-BOSS3</span><span>    PLACEHOLDER-PREIS3</span></li>
+                <li><span>PLACEHOLDER-BOSS4</span><span>    PLACEHOLDER-PREIS4</span></li>
+                <li><span>PLACEHOLDER-BOSS5</span><span>    PLACEHOLDER-PREIS5</span></li>
+                <li><span>PLACEHOLDER-BOSS6</span><span>    PLACEHOLDER-PREIS6</span></li>
+                <li><span>PLACEHOLDER-BOSS7</span><span>    PLACEHOLDER-PREIS7</span></li>
+                <li><span>PLACEHOLDER-BOSS8</span><span>    PLACEHOLDER-PREIS8</span></li>
+                <li><span>PLACEHOLDER-BOSS9</span><span>    PLACEHOLDER-PREIS9</span></li>
+                <li><span>PLACEHOLDER-BOSS10</span><span>   PLACEHOLDER-PREIS10</span></li>
+                <li><span>PLACEHOLDER-BOSS11</span><span>   PLACEHOLDER-PREIS11</span></li>
                 </li>
             </ul>
 
