--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -77,17 +77,20 @@
             <br/>
             <p><u>PLACEHOLDER6</u></p>
             <ul class="raid-schedule">
-                <li><span>PLACEHOLDER-BOSS1</span> <span>PLACEHOLDER-PREIS1 </span></li>
-                <li><span>PLACEHOLDER-BOSS2</span> <span>PLACEHOLDER-PREIS2 </span></li>
-                <li><span>PLACEHOLDER-BOSS3</span> <span>PLACEHOLDER-PREIS3 </span></li>
-                <li><span>PLACEHOLDER-BOSS4</span> <span>PLACEHOLDER-PREIS4 </span></li>
-                <li><span>PLACEHOLDER-BOSS5</span> <span>PLACEHOLDER-PREIS5 </span></li>
-                <li><span>PLACEHOLDER-BOSS6</span> <span>PLACEHOLDER-PREIS6 </span></li>
-                <li><span>PLACEHOLDER-BOSS7</span> <span>PLACEHOLDER-PREIS7 </span></li>
-                <li><span>PLACEHOLDER-BOSS8</span> <span>PLACEHOLDER-PREIS8 </span></li>
-                <li><span>PLACEHOLDER-BOSS9</span> <span>PLACEHOLDER-PREIS9 </span></li>
-                <li><span>PLACEHOLDER-BOSS10</span><span>PLACEHOLDER-PREIS10</span></li>
-                <li><span>PLACEHOLDER-BOSS11</span><span>PLACEHOLDER-PREIS11</span></li>
+                <li><span><b>Boss</b>/span>         <span>Preis</b>/span></li>
+                <li><span>Vigilant Guardian</span>  <span>425k </span></li>
+                <li><span>Skolex</span>             <span>425k </span></li>
+                <li><span>Dausegne</span>           <span>425k </span></li>
+                <li><span>Artificer Xy'mox</span> <span>PLACEHOLDER-PREIS4 </span></li>
+                <li><span>Prototype Pantheon</span> <span>PLACEHOLDER-PREIS5 </span></li>
+                <li><span>Lihuvim</span> <span>PLACEHOLDER-PREIS6 </span></li>
+                <li><span>Halondrus</span> <span>PLACEHOLDER-PREIS7 </span></li>
+                <li><span>Anduin Wrynn</span> <span>PLACEHOLDER-PREIS8 </span></li>
+                <li><span>Lords of Dread</span> <span>PLACEHOLDER-PREIS9 </span></li>
+                <li><span>Rygelon</span><span>PLACEHOLDER-PREIS10</span></li>
+                <li><span>The Jailer</span><span>PLACEHOLDER-PREIS11</span></li>
+                
+                <li><span>11/11 inklusive Mount</span><span>PLACEHOLDER-PREIS11</span></li>
                 </li>
             </ul>
 
