--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -73,14 +73,14 @@
             <p>PLACEHOLDER2 <span>PLACEHOLDER3</span> PLACEHOLDER4.
             </p>
 
-            <p> PLACEHOLDER5.</p>
+            <p>PLACEHOLDER 5.</p>
             <br/>
-            <p><u>PLACEHOLDER6</u></p>
+            <p><u>Sepulcher of the First Ones [Mythic]</u></p>
             <ul class="raid-schedule">
-                <li><span><b>Boss</b>/span>         <span>Preis</b>/span></li>
-                <li><span>Vigilant Guardian</span>  <span>425k </span></li>
-                <li><span>Skolex</span>             <span>425k </span></li>
-                <li><span>Dausegne</span>           <span>425k </span></li>
+                <li><span><b>Boss</b></span>               <span>Preis</b></span></li>
+                <li><span>&#8226;Vigilant Guardian</span>  <span>425k </span></li>
+                <li><span>&#8226;Skolex</span>             <span>425k </span></li>
+                <li><span>&#8226;Dausegne</span>           <span>425k </span></li>
                 <li><span>Artificer Xy'mox</span> <span>PLACEHOLDER-PREIS4 </span></li>
                 <li><span>Prototype Pantheon</span> <span>PLACEHOLDER-PREIS5 </span></li>
                 <li><span>Lihuvim</span> <span>PLACEHOLDER-PREIS6 </span></li>
