--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -77,10 +77,10 @@
             <br/>
             <p><u>Sepulcher of the First Ones [Mythic]</u></p>
             <ul class="raid-schedule">
-                <li><span><b>Boss</b></span>               <span>Preis</b></span></li>
-                <li><span>&#8226;Vigilant Guardian</span>  <span>425k </span></li>
-                <li><span>&#8226;Skolex</span>             <span>425k </span></li>
-                <li><span>&#8226;Dausegne</span>           <span>425k </span></li>
+                <li><span><b>Boss</b></span>                    <span>Preis</b></span></li>
+                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k </span></li>
+                <li><span>&#8226;&nbsp;Skolex</span>            <span>425k </span></li>
+                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k </span></li>
                 <li><span>Artificer Xy'mox</span> <span>PLACEHOLDER-PREIS4 </span></li>
                 <li><span>Prototype Pantheon</span> <span>PLACEHOLDER-PREIS5 </span></li>
                 <li><span>Lihuvim</span> <span>PLACEHOLDER-PREIS6 </span></li>
