--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -77,20 +77,20 @@
             <br/>
             <p><u>Sepulcher of the First Ones [Mythic]</u></p>
             <ul class="raid-schedule">
-                <li><span><b>Boss</b></span>                    <span>Preis</b></span></li>
+                <li><span><b>Boss</b></span>                    <span><b>Preis</b></span></li>
                 <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
                 <li><span>&#8226;&nbsp;Skolex</span>            <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
                 <li><span>&#8226;&nbsp;Dausegne</span>          <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
-                <li><span>Artificer Xy'mox</span> <span>PLACEHOLDER-PREIS4 </span></li>
-                <li><span>Prototype Pantheon</span> <span>PLACEHOLDER-PREIS5 </span></li>
-                <li><span>Lihuvim</span> <span>PLACEHOLDER-PREIS6 </span></li>
-                <li><span>Halondrus</span> <span>PLACEHOLDER-PREIS7 </span></li>
-                <li><span>Anduin Wrynn</span> <span>PLACEHOLDER-PREIS8 </span></li>
-                <li><span>Lords of Dread</span> <span>PLACEHOLDER-PREIS9 </span></li>
-                <li><span>Rygelon</span><span>PLACEHOLDER-PREIS10</span></li>
-                <li><span>The Jailer</span><span>PLACEHOLDER-PREIS11</span></li>
-                
-                <li><span>11/11 inklusive Mount</span><span>PLACEHOLDER-PREIS11</span></li>
+                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span><img src="../assets/media/icons/gold.png">&nbsp;850k </span></li>
+                <li><span>&#8226;&nbsp;Prototype Pantheon</span><span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
+                <li><span>&#8226;&nbsp;Lihuvim</span>           <span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
+                <li><span>&#8226;&nbsp;Halondrus</span>         <span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
+                <li><span>&#8226;&nbsp;Anduin Wrynn</span>      <span><img src="../assets/media/icons/gold.png">&nbsp;2295k </span></li>
+                <li><span>&#8226;&nbsp;Lords of Dread</span>    <span><img src="../assets/media/icons/gold.png">&nbsp;2550k </span></li>
+                <li><span>&#8226;&nbsp;Rygelon</span>           <span><img src="../assets/media/icons/gold.png">&nbsp;3400k</span></li>
+                <li><span>&#8226;&nbsp;The Jailer</span>        <span><img src="../assets/media/icons/gold.png">&nbsp;6800k</span></li>
+                <br/>
+                <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span><img src="../assets/media/icons/gold.png">&nbsp;10625k</span></li>
                 </li>
             </ul>
 
