--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -78,17 +78,17 @@
             <p><u>Sepulcher of the First Ones [Mythic]</u></p>
             <ul class="raid-schedule">
                 <li><span><b>Boss</b></span>                    <span><b>Preis</b></span></li>
-                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
-                <li><span>&#8226;&nbsp;Skolex</span>            <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
-                <li><span>&#8226;&nbsp;Dausegne</span>          <span><img src="../assets/media/icons/gold.png">&nbsp;425k </span></li>
-                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span><img src="../assets/media/icons/gold.png">&nbsp;850k </span></li>
-                <li><span>&#8226;&nbsp;Prototype Pantheon</span><span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
-                <li><span>&#8226;&nbsp;Lihuvim</span>           <span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
-                <li><span>&#8226;&nbsp;Halondrus</span>         <span><img src="../assets/media/icons/gold.png">&nbsp;1275k </span></li>
-                <li><span>&#8226;&nbsp;Anduin Wrynn</span>      <span><img src="../assets/media/icons/gold.png">&nbsp;2295k </span></li>
-                <li><span>&#8226;&nbsp;Lords of Dread</span>    <span><img src="../assets/media/icons/gold.png">&nbsp;2550k </span></li>
-                <li><span>&#8226;&nbsp;Rygelon</span>           <span><img src="../assets/media/icons/gold.png">&nbsp;3400k</span></li>
-                <li><span>&#8226;&nbsp;The Jailer</span>        <span><img src="../assets/media/icons/gold.png">&nbsp;6800k</span></li>
+                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Skolex</span>            <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Prototype Pantheon</span><span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Lihuvim</span>           <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Halondrus</span>         <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Anduin Wrynn</span>      <span>2295k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Lords of Dread</span>    <span>2550k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Rygelon</span>           <span>3400k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;The Jailer</span>        <span>6800k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <br/>
                 <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span><img src="../assets/media/icons/gold.png">&nbsp;10625k</span></li>
                 </li>
