--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -90,7 +90,7 @@
                 <li><span>&#8226;&nbsp;Rygelon</span>           <span>3400k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;The Jailer</span>        <span>6800k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <br/>
-                <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span><img src="../assets/media/icons/gold.png">&nbsp;10625k</span></li>
+                <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span>10625k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
 
