--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -68,13 +68,6 @@
 
     <section class="main-content flex-col">
         <div class="text-content">
-            <p>PLACEHOLDER</p>
-            
-            <p>PLACEHOLDER2 <span>PLACEHOLDER3</span> PLACEHOLDER4.
-            </p>
-
-            <p>PLACEHOLDER 5.</p>
-            <br/>
             <p><u>Sepulcher of the First Ones [Mythic]</u></p>
             <ul class="raid-schedule">
                 <li><span><b>Boss</b></span>                    <span><b>Preis</b></span></li>
@@ -93,6 +86,13 @@
                 <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span>10625k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
+        
+            <p><b><u>Sanctum of Domination [Mythic]</u><b></p>
+            <ul class="raid-schedule">
+                <li><span><b>Boss</b></span>                              <span><b>Preis</b></span></li>
+                <li><span>&#8226;&nbsp;Sylvanas Windrunner + Mount</span> <span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                </li>
+            </ul>
 
-            <p>PLACEHOLDER7.</p>
+            <p></p>
             </div>
