--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -68,9 +68,9 @@
 
     <section class="main-content flex-col">
         <div class="text-content">
-            <p><u>Sepulcher of the First Ones [Mythic]</u></p>
+            <p><b><u>Sepulcher of the First Ones [Mythic]</u><b></p>
             <ul class="raid-schedule">
-                <li><span><b>Boss</b></span>                    <span><b>Preis</b></span></li>
+                <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Skolex</span>            <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
@@ -86,10 +86,11 @@
                 <li><span>&#8226;&nbsp;Full Run + Mount</span>  <span>10625k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
-        
+            <br/>
+            <br/>
             <p><b><u>Sanctum of Domination [Mythic]</u><b></p>
             <ul class="raid-schedule">
-                <li><span><b>Boss</b></span>                              <span><b>Preis</b></span></li>
+                <li><span><u>Boss</u></span>                              <span><u>Preis</u></span></li>
                 <li><span>&#8226;&nbsp;Sylvanas Windrunner + Mount</span> <span>1700k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 </li>
             </ul>
