--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -71,10 +71,10 @@
             <p><b><u>Sepulcher of the First Ones [Mythic]</u><b></p>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px></span></li>
-                <li><span>&#8226;&nbsp;Skolex</span>            <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px></span></li>
-                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px></span></li>
-                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px></span></li>
+                <li><span>&#8226;&nbsp;Vigilant Guardian</span> <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px;></span></li>
+                <li><span>&#8226;&nbsp;Skolex</span>            <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px;></span></li>
+                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px;></span></li>
+                <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png" margin-bottom:-2px;></span></li>
                 <li><span>&#8226;&nbsp;Prototype Pantheon</span><span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Lihuvim</span>           <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Halondrus</span>         <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
