--- a/pages/boosting.html
+++ b/pages/boosting.html
@@ -71,9 +71,9 @@
             <p><b><u>Sepulcher of the First Ones [Mythic]</u><b></p>
             <ul class="raid-schedule">
                 <li><span><u>Boss</u></span>                    <span><u>Preis</u></span></li>
-                <li><span>&#8226;&nbsp;Vigilant Guardian</span> 425k &nbsp;<img src="../assets/media/icons/gold.png"></li>
-                <li><span>&#8226;&nbsp;Skolex</span>            425k &nbsp;<img src="../assets/media/icons/gold.png"></li>
-                <li><span>&#8226;&nbsp;Dausegne</span>          <span>425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Vigilant Guardian              425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Skolex                         425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
+                <li><span>&#8226;&nbsp;Dausegne                       425k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Artificer Xy'mox</span>  <span>850k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Prototype Pantheon</span><span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
                 <li><span>&#8226;&nbsp;Lihuvim</span>           <span>1275k &nbsp;<img src="../assets/media/icons/gold.png"></span></li>
